--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -7,11 +7,14 @@ ext {
     versionName = "1.0"
 
     supportVersion = '27.1.0'
-    butterknifeVersion = '8.8.1'
+    daggerVersion = '2.+'
+
+    // Square
     picassoVersion = '2.71828'
     leakCanaryVersion = '1.5.4'
-    daggerVersion = '2.+'
+    butterknifeVersion = '8.8.1'
     conductorVersion = '2.1.4'
+    rxbindingVersion = '2.1.1'
 
 //    junitVersion = '4.11'
 //    roboelectricVersion = '3.0'
