--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     annotationProcessor 'com.github.techery.janet-http:service-compiler:1.0.11'
     implementation 'com.github.techery.janet-http:client-okhttp3:1.0.6'
     implementation 'com.github.techery.janet-converters:gson:1.0.2'
+    implementation 'com.google.code.gson:gson:2.8.0'
 
     // Tests
     testImplementation 'junit:junit:4.12'
