--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,11 +24,19 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
         sourceCompatibility JavaVersion.VERSION_1_8
     }
+
+    packagingOptions {
+        exclude 'META-INF/rxjava.properties'
+    }
 }
 
 dependencies {
+    // Support libraries
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "com.android.support:appcompat-v7:$rootProject.ext.supportVersion"
+    implementation 'com.android.support:recyclerview-v7:27.1.0'
+    implementation 'com.android.support:design:27.1.0'
+    // Picasso
     implementation "com.squareup.picasso:picasso:$rootProject.ext.picassoVersion"
     // RxBinding
     implementation "com.jakewharton.rxbinding2:rxbinding:$rootProject.ext.rxbindingVersion"
@@ -39,28 +47,28 @@ dependencies {
     // Dagger
     implementation "com.google.dagger:dagger:$rootProject.ext.daggerVersion"
     annotationProcessor "com.google.dagger:dagger-compiler:$rootProject.ext.daggerVersion"
-//    implementation "com.google.dagger:dagger-android:$rootProject.ext.daggerVersion"
-//    implementation "com.google.dagger:dagger-android-support:$rootProject.ext.daggerVersion"
-//    annotationProcessor "com.google.dagger:dagger-android-processor:$rootProject.ext.daggerVersion"
     // ButterKnife
     implementation "com.jakewharton:butterknife:$rootProject.ext.butterknifeVersion"
     annotationProcessor "com.jakewharton:butterknife-compiler:$rootProject.ext.butterknifeVersion"
     //LeakCanary
     debugImplementation "com.squareup.leakcanary:leakcanary-android:$rootProject.ext.leakCanaryVersion"
     releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$rootProject.ext.leakCanaryVersion"
+    // Janet
+    implementation "com.github.techery:janet:$rootProject.ext.janetVersion"
+    implementation "com.github.techery:janet-command:$rootProject.ext.janetCommandVersion"
+    implementation "com.github.techery.janet-http:service:$rootProject.ext.janetHttpServiceVersion"
+    implementation "com.github.techery.janet-http:client-okhttp3:$rootProject.ext.janetHttpClientVersion"
+    implementation "com.github.techery.janet-converters:gson:$rootProject.ext.janetConvertorVersion"
+    annotationProcessor "com.github.techery.janet-http:service-compiler:$rootProject.ext.janetHttpServiceVersion"
+    // GSON
+    implementation "com.google.code.gson:gson:$rootProject.ext.gsonVersion"
 
-    implementation 'com.github.techery:janet:1.0.7'
-    implementation 'com.github.techery:janet-command:1.0.5'
-    implementation 'com.github.techery.janet-http:service:1.0.11'
-    annotationProcessor 'com.github.techery.janet-http:service-compiler:1.0.11'
-    implementation 'com.github.techery.janet-http:client-okhttp3:1.0.6'
-    implementation 'com.github.techery.janet-converters:gson:1.0.2'
-    implementation 'com.google.code.gson:gson:2.8.0'
+    // Ok-Http
+    implementation "com.squareup.okhttp3:okhttp:$rootProject.ext.okHttpVersion"
+    implementation "com.squareup.okhttp3:logging-interceptor:$rootProject.ext.okHttpVersion"
 
     // Tests
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    implementation 'com.android.support:recyclerview-v7:27.1.0'
-    implementation 'com.android.support:design:27.1.0'
 }
