--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,13 +39,18 @@ dependencies {
     // Picasso
     implementation "com.squareup.picasso:picasso:$rootProject.ext.picassoVersion"
     // RxJava2
-    implementation "io.reactivex.rxjava2:rxjava:$rootProject.ext.rxJava2Version"
+//    implementation "io.reactivex.rxjava2:rxjava:$rootProject.ext.rxJava2Version"
+    implementation 'io.reactivex:rxjava:1.3.8'
     // RxBinding
-    implementation "com.jakewharton.rxbinding2:rxbinding:$rootProject.ext.rxbindingVersion"
+//    implementation "com.jakewharton.rxbinding2:rxbinding:$rootProject.ext.rxbindingVersion"
+    implementation "com.jakewharton.rxbinding:rxbinding:1.0.1"
     // RxLifecircle
-    implementation 'com.trello.rxlifecycle2:rxlifecycle-android:2.2.1'
+//    implementation 'com.trello.rxlifecycle2:rxlifecycle-android:2.2.1'
+    implementation 'com.trello:rxlifecycle:1.0'
+    implementation 'com.trello:rxlifecycle-android:1.0'
     // RxPreferences
-    implementation 'com.f2prateek.rx.preferences2:rx-preferences:2.0.0-RC3'
+//    implementation 'com.f2prateek.rx.preferences2:rx-preferences:2.0.0-RC3'
+    implementation 'com.f2prateek.rx.preferences:rx-preferences:1.0.2'
     // Conductor
     implementation "com.bluelinelabs:conductor:$rootProject.ext.conductorVersion"
     // Dagger
