--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,4 @@
 apply plugin: 'com.android.application'
-//apply plugin: 'com.android.library'
-//apply plugin: 'com.jakewharton.butterknife'
 
 android {
     compileSdkVersion 27
@@ -34,23 +32,17 @@ dependencies {
     // Support libraries
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "com.android.support:appcompat-v7:$rootProject.ext.supportVersion"
-    implementation 'com.android.support:recyclerview-v7:27.1.0'
-    implementation 'com.android.support:design:27.1.0'
+    implementation "com.android.support:recyclerview-v7:$rootProject.ext.supportVersion"
+    implementation "com.android.support:design:$rootProject.ext.supportVersion"
     // Picasso
     implementation "com.squareup.picasso:picasso:$rootProject.ext.picassoVersion"
-    // RxJava2
-//    implementation "io.reactivex.rxjava2:rxjava:$rootProject.ext.rxJava2Version"
-    implementation 'io.reactivex:rxjava:1.3.8'
+    // RxJava
+    implementation "io.reactivex:rxjava:$rootProject.ext.rxJavaVersion"
     // RxBinding
-//    implementation "com.jakewharton.rxbinding2:rxbinding:$rootProject.ext.rxbindingVersion"
-    implementation "com.jakewharton.rxbinding:rxbinding:1.0.1"
+    implementation "com.jakewharton.rxbinding:rxbinding:$rootProject.ext.rxBindingVersion"
     // RxLifecircle
-//    implementation 'com.trello.rxlifecycle2:rxlifecycle-android:2.2.1'
-    implementation 'com.trello:rxlifecycle:1.0'
-    implementation 'com.trello:rxlifecycle-android:1.0'
-    // RxPreferences
-//    implementation 'com.f2prateek.rx.preferences2:rx-preferences:2.0.0-RC3'
-    implementation 'com.f2prateek.rx.preferences:rx-preferences:1.0.2'
+    implementation "com.trello:rxlifecycle:$rootProject.ext.rxLifecycleVersion"
+    implementation "com.trello:rxlifecycle-android:$rootProject.ext.rxLifecycleVersion"
     // Conductor
     implementation "com.bluelinelabs:conductor:$rootProject.ext.conductorVersion"
     // Dagger
@@ -77,7 +69,7 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$rootProject.ext.okHttpVersion"
 
     // Tests
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    testImplementation "junit:junit:$rootProject.ext.junitVersion"
+    androidTestImplementation "com.android.support.test:runner:$rootProject.ext.testRunnerVersion"
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:$rootProject.ext.espressoVersion"
 }
