--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -24,9 +24,12 @@ ext {
     //GSON
     gsonVersion = '2.1.1'
     //RX
-    rxJava2Version = '2.1.12'
+    rxJavaVersion = '1.3.8'
+    rxBindingVersion = '1.0.1'
+    rxLifecycleVersion = '1.0'
 
-
-//    junitVersion = '4.11'
-//    roboelectricVersion = '3.0'
+    //Tests
+    junitVersion = '4.12'
+    testRunnerVersion = '1.0.1'
+    espressoVersion = '3.0.1'
 }
