--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 27
@@ -35,41 +38,54 @@ dependencies {
     implementation "com.android.support:recyclerview-v7:$rootProject.ext.supportVersion"
     implementation "com.android.support:design:$rootProject.ext.supportVersion"
     // Picasso
-    implementation "com.squareup.picasso:picasso:$rootProject.ext.picassoVersion"
+//    implementation "com.squareup.picasso:picasso:$rootProject.ext.picassoVersion"
     // RxJava
-    implementation "io.reactivex:rxjava:$rootProject.ext.rxJavaVersion"
+//    implementation "io.reactivex:rxjava:$rootProject.ext.rxJavaVersion"
     // RxBinding
-    implementation "com.jakewharton.rxbinding:rxbinding:$rootProject.ext.rxBindingVersion"
+//    implementation "com.jakewharton.rxbinding:rxbinding:$rootProject.ext.rxBindingVersion"
     // RxLifecircle
-    implementation "com.trello:rxlifecycle:$rootProject.ext.rxLifecycleVersion"
-    implementation "com.trello:rxlifecycle-android:$rootProject.ext.rxLifecycleVersion"
+//    implementation "com.trello:rxlifecycle:$rootProject.ext.rxLifecycleVersion"
+//    implementation "com.trello:rxlifecycle-android:$rootProject.ext.rxLifecycleVersion"
     // Conductor
     implementation "com.bluelinelabs:conductor:$rootProject.ext.conductorVersion"
     // Dagger
+//    implementation "com.google.dagger:dagger:$rootProject.ext.daggerVersion"
+//    annotationProcessor "com.google.dagger:dagger-compiler:$rootProject.ext.daggerVersion"
+    kapt "com.google.dagger:dagger-compiler:$rootProject.ext.daggerVersion"
     implementation "com.google.dagger:dagger:$rootProject.ext.daggerVersion"
-    annotationProcessor "com.google.dagger:dagger-compiler:$rootProject.ext.daggerVersion"
+
     // ButterKnife
-    implementation "com.jakewharton:butterknife:$rootProject.ext.butterknifeVersion"
-    annotationProcessor "com.jakewharton:butterknife-compiler:$rootProject.ext.butterknifeVersion"
+//    implementation "com.jakewharton:butterknife:$rootProject.ext.butterknifeVersion"
+//    annotationProcessor "com.jakewharton:butterknife-compiler:$rootProject.ext.butterknifeVersion"
     //LeakCanary
-    debugImplementation "com.squareup.leakcanary:leakcanary-android:$rootProject.ext.leakCanaryVersion"
-    releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$rootProject.ext.leakCanaryVersion"
+//    debugImplementation "com.squareup.leakcanary:leakcanary-android:$rootProject.ext.leakCanaryVersion"
+//    releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$rootProject.ext.leakCanaryVersion"
     // Janet
-    implementation "com.github.techery:janet:$rootProject.ext.janetVersion"
-    implementation "com.github.techery:janet-command:$rootProject.ext.janetCommandVersion"
-    implementation "com.github.techery.janet-http:service:$rootProject.ext.janetHttpServiceVersion"
-    implementation "com.github.techery.janet-http:client-okhttp3:$rootProject.ext.janetHttpClientVersion"
-    implementation "com.github.techery.janet-converters:gson:$rootProject.ext.janetConvertorVersion"
-    annotationProcessor "com.github.techery.janet-http:service-compiler:$rootProject.ext.janetHttpServiceVersion"
+//    implementation "com.github.techery:janet:$rootProject.ext.janetVersion"
+//    implementation "com.github.techery:janet-command:$rootProject.ext.janetCommandVersion"
+//    implementation "com.github.techery.janet-http:service:$rootProject.ext.janetHttpServiceVersion"
+//    implementation "com.github.techery.janet-http:client-okhttp3:$rootProject.ext.janetHttpClientVersion"
+//    implementation "com.github.techery.janet-converters:gson:$rootProject.ext.janetConvertorVersion"
+//    annotationProcessor "com.github.techery.janet-http:service-compiler:$rootProject.ext.janetHttpServiceVersion"
     // GSON
-    implementation "com.google.code.gson:gson:$rootProject.ext.gsonVersion"
+//    implementation "com.google.code.gson:gson:$rootProject.ext.gsonVersion"
 
     // Ok-Http
-    implementation "com.squareup.okhttp3:okhttp:$rootProject.ext.okHttpVersion"
-    implementation "com.squareup.okhttp3:logging-interceptor:$rootProject.ext.okHttpVersion"
+//    implementation "com.squareup.okhttp3:okhttp:$rootProject.ext.okHttpVersion"
+//    implementation "com.squareup.okhttp3:logging-interceptor:$rootProject.ext.okHttpVersion"
 
+    // Kotlin
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     // Tests
     testImplementation "junit:junit:$rootProject.ext.junitVersion"
     androidTestImplementation "com.android.support.test:runner:$rootProject.ext.testRunnerVersion"
     androidTestImplementation "com.android.support.test.espresso:espresso-core:$rootProject.ext.espressoVersion"
+}
+
+androidExtensions {
+    experimental = true
+}
+
+repositories {
+    mavenCentral()
 }
